fixed numpad layout bug and added color styles

--- a/style.css
+++ b/style.css
@@ -39,9 +39,12 @@
     background-color: rgb(216, 216, 216);
 }
 
-body {
+html, body {
+    height: 95%;
     font-family: 'Montserrat', sans-serif;
     color: var(--text-color-primary);
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
@@ -147,18 +150,39 @@ body {
 
 #player-container {
     border: 1px solid var(--border-color-primary);   
-    padding: 12px;
+    padding: 24px;
     text-align: center;
-    background-color: rgba(174, 174, 174, 0.587);
+   background-color: #0099ff55;
+    font-weight: bold;
+    border-radius: 6px;
+}
+
+#parent-container {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
 }
 
 #numpad_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
-    gap: 1px;
+    gap: 3px;
+    flex: 1;
     margin: 4px;
     margin-top: 32px;
+}
+
+#numpad_container > :nth-last-child(-n+3) {
+    height: 70px;
+}
+
+#numpad_container > :nth-last-child(1) {
+    background-color: rgba(13, 255, 0, 0.398);
+}
+
+#numpad_container > :nth-last-child(3) {
+    background-color: rgba(255, 94, 0, 0.398);
 }
 
 .number-button {
@@ -166,5 +190,11 @@ body {
     padding: 8px;
     text-align: center;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
